Made design responsive and fixed jumping buttons with transparent border

--- a/main.css
+++ b/main.css
@@ -20,10 +20,12 @@ header {
 }
 
 main {
-  padding-top: 250px;
-  padding-bottom: 250px;
-  width: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 input[type=text] {
@@ -31,7 +33,7 @@ input[type=text] {
 }
 
 input[type=button] {
-  border: none;
+  border: 1px solid transparent;
   color: #666;
   background-color: lightgrey;
   padding: 10px 15px;
